added vercel speed insight pakage

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@appointlet/appointlet.js": "^3.0.7",
     "@calcom/embed-react": "^1.5.1",
     "@emailjs/browser": "^4.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "antd": "^5.19.3",
     "next": "14.2.5",
     "react": "^18",
