--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@calcom/embed-react": "^1.5.1",
     "@contentsquare/tag-sdk": "^1.1.0",
     "@emailjs/browser": "^4.4.1",
+    "@next/third-parties": "^14.2.5",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "antd": "^5.19.3",
