--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "antd": "^5.19.3",
+    "contentful": "^11.4.0",
     "next": "14.2.5",
     "react": "^18",
     "react-cookie-consent": "^9.0.0",
